--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ GOOGLE_API_KEY=
 GOOGLE_EMBEDDING_MODEL='models/embedding-001'
 OPENAI_API_KEY=
 OPENAI_EMBEDDING_MODEL='text-embedding-3-small'
-DATABASE_URL=
-PG_VECTOR_COLLECTION_NAME=
-PDF_PATH=
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/rag
+PG_VECTOR_COLLECTION_NAME=document_chunks
+PDF_PATH=document.pdf
+LLM_PROVIDER=openai
+CHAINLIT_AUTH_SECRET=
